// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Checkout should render Checkout with cart.status = "loading" 1`] = `
<DocumentFragment>
  <section
    class="checkout"
  >
    <svg
      class="small-spinner"
      height="45"
      preserveAspectRatio="xMidYMid"
      viewBox="0 0 100 100"
      width="45"
    >
      <path
        d="M24.3 30C11.4 30 5 43.3 5 50s6.4 20 19.3 20c19.3 0 32.1-40 51.4-40 C88.6 30 95 43.3 95 50s-6.4 20-19.3 20C56.4 70 43.6 30 24.3 30z"
        fill="none"
        stroke="#000"
        stroke-dasharray="42.76482137044271 42.76482137044271"
        stroke-linecap="round"
        stroke-width="3"
      >
        <animate
          attributeName="stroke-dashoffset"
          dur="1s"
          keyTimes="0;1"
          repeatCount="indefinite"
          values="0;256.58892822265625"
        />
      </path>
    </svg>
    <button
      aria-label="Checkout order"
    >
      Checkout
    </button>
  </section>
</DocumentFragment>
`;

exports[`Component: Checkout should render Checkout with default store state 1`] = `
<DocumentFragment>
  <section
    class="checkout"
  >
    <h2
      aria-label="Final price of the entire order is 0.00"
      tabindex="0"
    >
      Total: 0.00 $
    </h2>
    <button
      aria-label="Checkout order"
    >
      Checkout
    </button>
  </section>
</DocumentFragment>
`;

exports[`Component: Checkout should render Checkout with mockData store state 1`] = `
<DocumentFragment>
  <section
    class="checkout"
  >
    <h2
      aria-label="Final price of the entire order is 87.76"
      tabindex="0"
    >
      Total: 87.76 $
    </h2>
    <button
      aria-label="Checkout order"
    >
      Checkout
    </button>
  </section>
</DocumentFragment>
`;
